--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
   <body class="Pokemon__styles">
+    <h1>pokedex</h1>
+    <ul class="pokemon-list"></ul>
     <script src="js/scripts.js"></script>
   </body>
 </html>
