--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
 </head>
 
 <body class="Pokemon__styles">
+
   <h1>pokedex</h1>
   <ul class="pokemon-list"></ul>
+  <div id="modal-container">
+      <div id="show-modal"></div>
+  </div>
+
   <strong>
     <script src="js/promise-polyfill.js"></script>
     <script src="js/fetch-polyfill.js"></script>
