--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
 
   <h1>pokedex</h1>
   <ul class="pokemon-list"></ul>
-  <div id="modal-container">
-
-  </div>
-
+  <div id="modal-container"></div>
+<div id="show-modal"></div>
   <strong>
     <script src="js/promise-polyfill.js"></script>
     <script src="js/fetch-polyfill.js"></script>
