--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
   </nav>
   <!-- Button trigger modal -->
-  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="pokemonModal">
   Launch demo modal
 </button>
   <!-- Modal -->
@@ -48,7 +48,6 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
         </div>
       </div>
     </div>
