--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   </div>
 </div>
 
-<h1>Pokedex</h1>
+<h1>Pokedex - Click on the button to see some details of your selected Pokemon</h1>
   <ul class="list-group"></ul>
   <div id="modal-container"></div>
   <strong>
